<resources>
    <string name="app_name">WimbleBuddy</string>
    <string name="fragment_create_game_date_text">-/-/-</string>
    <string name="fragment_create_game_time_text">00:00</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="plan_game">Plan een game</string>

    <!-- CreateGameFragment  -->
    <string name="fragment_create_game_date">Datum</string>
    <string name="fragment_create_game_time_from">Van</string>
    <string name="fragment_create_game_time_till">Tot</string>
    <string name="fragment_create_game_plan_game">Plan game</string>
    <string name="fragment_create_game_edit_location">Locatie</string>
    <string name="fragment_create_game_error_time">Eindtijd mag niet eerder zijn dan begintijd!</string>
    <string name="fragment_create_game_error_info">Vul eerst alles in!</string>
    <string name="fragment_create_game_succes">Game succesvol gepland!</string>
    <string name="fragment_create_game_timepicker_title">Selecteer Tijd</string>

    <!-- HomeFragment  -->
    <string name="fragment_home_text_date">--/--/----</string>
    <string name="fragment_home_text_time">00:00 – 00:00</string>
    <string name="fragment_home_text_location">Locatie</string>
    <string name="fragment_home_text_players">0/2</string>

    <!-- DeleteGameFragment -->
    <string name="fragment_delete_text_delete_button">Yes :(</string>
    <string name="fragment_delete_text_keep_button">No :)</string>
    <string name="fragment_delete_game_succes">Game geannuleerd!</string>
    <string name="fragment_delete_game_error">Fout bij het annuleren, probeer opnieuw.</string>
</resources>
