<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:focusableInTouchMode="true">

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/fragment_create_game_date"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/timeFromButton"
        app:layout_constraintStart_toStartOf="@+id/timeFromButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_create_game_date_text"
        app:layout_constraintBottom_toBottomOf="@+id/dateButton"
        app:layout_constraintEnd_toEndOf="@+id/timeFromTextView"
        app:layout_constraintStart_toStartOf="@+id/timeFromTextView"
        app:layout_constraintTop_toTopOf="@+id/dateButton" />

    <Button
        android:id="@+id/timeFromButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/fragment_create_game_time_from"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toStartOf="@+id/timeFromTextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:id="@+id/timeFromTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/fragment_create_game_time_text"
        app:layout_constraintBottom_toBottomOf="@+id/timeFromButton"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/timeFromButton" />

    <TextView
        android:id="@+id/timeTillTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/fragment_create_game_time_text"
        app:layout_constraintBottom_toBottomOf="@+id/timeTillButton"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/timeTillButton" />

    <Button
        android:id="@+id/timeTillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/fragment_create_game_time_till"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/timeFromButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/timeTillTextView"
        app:layout_constraintTop_toTopOf="@+id/timeFromButton" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/fragment_create_game_edit_location"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/timeTillTextView"
        app:layout_constraintStart_toEndOf="@+id/timeFromTextView"
        app:layout_constraintTop_toBottomOf="@+id/timeFromTextView" />

    <Button
        android:id="@+id/createGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="@color/button"
        android:text="@string/fragment_create_game_plan_game"
        android:textAppearance="@android:style/TextAppearance.DeviceDefault.SearchResult.Title"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationEditText" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.50121653" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />
</android.support.constraint.ConstraintLayout>